--- a/index.html
+++ b/index.html
@@ -28,5 +28,57 @@
             </div>
         </div>
     </header>
+    <div class="contenido-principal contenedor">
+        <main class="blog">
+            <h2>Nuestro Blog</h2>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="images/blog1.jpg" alt="Imagen Blog">
+                </div>
+                <div class="contenido-blog">
+                    <h3>Tipos de Grano de Cafe</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestias reprehenderit tempora modi, incidunt porro pariatur eum debitis dignissimos voluptas vitae, voluptate facilis odit molestiae necessitatibus ad asperiores error doloremque, repellendus dolorum! Tempore iusto libero eveniet asperiores nisi incidunt sequi distinctio enim quibusdam fuga sint ratione est, quisquam ab aliquam dicta cumque unde? Officiis, dolore quis hic illum eveniet nemo quos numquam earum. Aliquid ea consequuntur necessitatibus non laborum minus quisquam id veritatis, saepe nulla! Quam pariatur dolor consequuntur voluptatem autem cum quis. Rerum corrupti explicabo beatae rem quos sed esse enim nulla, molestiae debitis laudantium amet temporibus dignissimos excepturi!</p>
+                    <a href="#" class="btn btn-primario">Leer entrada</a>
+                </div>
+            </article>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="images/blog2.jpg" alt="Imagen Blog">
+                </div>
+                <div class="contenido-blog">
+                    <h3>Tres deliciosas recetas para cafe</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestias reprehenderit tempora modi, incidunt porro pariatur eum debitis dignissimos voluptas vitae, voluptate facilis odit molestiae necessitatibus ad asperiores error doloremque, repellendus dolorum! Tempore iusto libero eveniet asperiores nisi incidunt sequi distinctio enim quibusdam fuga sint ratione est, quisquam ab aliquam dicta cumque unde? Officiis, dolore quis hic illum eveniet nemo quos numquam earum. Aliquid ea consequuntur necessitatibus non laborum minus quisquam id veritatis, saepe nulla! Quam pariatur dolor consequuntur voluptatem autem cum quis. Rerum corrupti explicabo beatae rem quos sed esse enim nulla, molestiae debitis laudantium amet temporibus dignissimos excepturi!</p>
+                    <a href="#" class="btn btn-primario">Leer entrada</a>
+                </div>
+            </article>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="images/blog3.jpg" alt="Imagen Blog">
+                </div>
+                <div class="contenido-blog">
+                    <h3>Beneficios del Cafe</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestias reprehenderit tempora modi, incidunt porro pariatur eum debitis dignissimos voluptas vitae, voluptate facilis odit molestiae necessitatibus ad asperiores error doloremque, repellendus dolorum! Tempore iusto libero eveniet asperiores nisi incidunt sequi distinctio enim quibusdam fuga sint ratione est, quisquam ab aliquam dicta cumque unde? Officiis, dolore quis hic illum eveniet nemo quos numquam earum. Aliquid ea consequuntur necessitatibus non laborum minus quisquam id veritatis, saepe nulla! Quam pariatur dolor consequuntur voluptatem autem cum quis. Rerum corrupti explicabo beatae rem quos sed esse enim nulla, molestiae debitis laudantium amet temporibus dignissimos excepturi!</p>
+                    <a href="#" class="btn btn-primario">Leer entrada</a>
+                </div>
+            </article>
+        </main>
+        <aside class="cursos">
+            <h2>Nuestros cursos y talleres</h2>
+            <ul class="cursos-lista">
+                <li class="curso">
+                    <h4>Tecnicas de extraccion de cafe</h4>
+                    <p>Precio:<span>Gratis</span></p>
+                    <p>Cupo:<span>20</span></p>
+                    <a href="curso.html" class="btn btn-secundario">Mas informacion</a>
+                </li>
+                <li class="curso">
+                        <h4>Tecnicas de extraccion de cafe</h4>
+                        <p>Precio:<span>Gratis</span></p>
+                        <p>Cupo:<span>20</span></p>
+                        <a href="curso.html" class="btn btn-secundario">Mas informacion</a>
+                    </li>
+            </ul>
+        </aside>
+    </div>
 </body>
 </html>
