--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <img src="images/blog1.jpg" alt="Imagen Blog">
                 </div>
                 <div class="contenido-blog">
-                    <h3>Tipos de Grano de Cafe</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestias reprehenderit tempora modi, incidunt porro pariatur eum debitis dignissimos voluptas vitae, voluptate facilis odit molestiae necessitatibus ad asperiores error doloremque, repellendus dolorum! Tempore iusto libero eveniet asperiores nisi incidunt sequi distinctio enim quibusdam fuga sint ratione est, quisquam ab aliquam dicta cumque unde? Officiis, dolore quis hic illum eveniet nemo quos numquam earum. Aliquid ea consequuntur necessitatibus non laborum minus quisquam id veritatis, saepe nulla! Quam pariatur dolor consequuntur voluptatem autem cum quis. Rerum corrupti explicabo beatae rem quos sed esse enim nulla, molestiae debitis laudantium amet temporibus dignissimos excepturi!</p>
+                    <h3 class="m-0">Tipos de Grano de Cafe</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, animi beatae? Magni quos dolore accusantium repellendus illum. Eligendi, recusandae. Quidem.</p>
                     <a href="#" class="btn btn-primario">Leer entrada</a>
                 </div>
             </article>
@@ -46,8 +46,8 @@
                     <img src="images/blog2.jpg" alt="Imagen Blog">
                 </div>
                 <div class="contenido-blog">
-                    <h3>Tres deliciosas recetas para cafe</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestias reprehenderit tempora modi, incidunt porro pariatur eum debitis dignissimos voluptas vitae, voluptate facilis odit molestiae necessitatibus ad asperiores error doloremque, repellendus dolorum! Tempore iusto libero eveniet asperiores nisi incidunt sequi distinctio enim quibusdam fuga sint ratione est, quisquam ab aliquam dicta cumque unde? Officiis, dolore quis hic illum eveniet nemo quos numquam earum. Aliquid ea consequuntur necessitatibus non laborum minus quisquam id veritatis, saepe nulla! Quam pariatur dolor consequuntur voluptatem autem cum quis. Rerum corrupti explicabo beatae rem quos sed esse enim nulla, molestiae debitis laudantium amet temporibus dignissimos excepturi!</p>
+                    <h3 class="m-0">Tres deliciosas recetas para cafe</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, animi beatae? Magni quos dolore accusantium repellendus illum. Eligendi, recusandae. Quidem.</p>
                     <a href="#" class="btn btn-primario">Leer entrada</a>
                 </div>
             </article>
@@ -56,8 +56,8 @@
                     <img src="images/blog3.jpg" alt="Imagen Blog">
                 </div>
                 <div class="contenido-blog">
-                    <h3>Beneficios del Cafe</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestias reprehenderit tempora modi, incidunt porro pariatur eum debitis dignissimos voluptas vitae, voluptate facilis odit molestiae necessitatibus ad asperiores error doloremque, repellendus dolorum! Tempore iusto libero eveniet asperiores nisi incidunt sequi distinctio enim quibusdam fuga sint ratione est, quisquam ab aliquam dicta cumque unde? Officiis, dolore quis hic illum eveniet nemo quos numquam earum. Aliquid ea consequuntur necessitatibus non laborum minus quisquam id veritatis, saepe nulla! Quam pariatur dolor consequuntur voluptatem autem cum quis. Rerum corrupti explicabo beatae rem quos sed esse enim nulla, molestiae debitis laudantium amet temporibus dignissimos excepturi!</p>
+                    <h3 class="m-0">Beneficios del Cafe</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, animi beatae? Magni quos dolore accusantium repellendus illum. Eligendi, recusandae. Quidem.</p>
                     <a href="#" class="btn btn-primario">Leer entrada</a>
                 </div>
             </article>
