We have the dev and dist folders and the scss file

--- a/dev/index.html
+++ b/dev/index.html
@@ -66,16 +66,16 @@
             <h2>Nuestros cursos y talleres</h2>
             <ul class="cursos-lista">
                 <li class="curso">
-                    <h4>Tecnicas de extraccion de cafe</h4>
+                    <h4 class="m-0">Tecnicas de extraccion de cafe</h4>
                     <p>Precio:<span>Gratis</span></p>
                     <p>Cupo:<span>20</span></p>
                     <a href="curso.html" class="btn btn-secundario">Mas informacion</a>
                 </li>
                 <li class="curso">
-                        <h4>Tecnicas de extraccion de cafe</h4>
-                        <p>Precio:<span>Gratis</span></p>
-                        <p>Cupo:<span>20</span></p>
-                        <a href="curso.html" class="btn btn-secundario">Mas informacion</a>
+                    <h4 class="m-0">Tecnicas de extraccion de cafe</h4>
+                    <p>Precio:<span>Gratis</span></p>
+                    <p>Cupo:<span>20</span></p>
+                    <a href="curso.html" class="btn btn-secundario">Mas informacion</a>
                     </li>
             </ul>
         </aside>
