The sass files are in the folder, the contact, about us and course pages are done

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
     <title>Blog de Cafe</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header class="site-header">
@@ -17,9 +17,9 @@
                     <h1 class="m-0">Blog<span>DeCafe</span></h1>
                 </a>
                 <nav class="navegacion">
-                    <a href="#">Nosotros</a>
-                    <a href="#">Cursos</a>
-                    <a href="#">Contacto</a>
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="cursos.html">Cursos</a>
+                    <a href="contacto.html">Contacto</a>
                 </nav>
             </div>
             <div class="txt-header">
@@ -38,7 +38,7 @@
                 <div class="contenido-blog">
                     <h3 class="m-0">Tipos de Grano de Cafe</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, animi beatae? Magni quos dolore accusantium repellendus illum. Eligendi, recusandae. Quidem.</p>
-                    <a href="#" class="btn btn-primario">Leer entrada</a>
+                    <a href="#" class="btn-primary">Leer entrada</a>
                 </div>
             </article>
             <article class="entrada-blog">
@@ -48,7 +48,7 @@
                 <div class="contenido-blog">
                     <h3 class="m-0">Tres deliciosas recetas para cafe</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, animi beatae? Magni quos dolore accusantium repellendus illum. Eligendi, recusandae. Quidem.</p>
-                    <a href="#" class="btn btn-primario">Leer entrada</a>
+                    <a href="#" class="btn-primary">Leer entrada</a>
                 </div>
             </article>
             <article class="entrada-blog">
@@ -58,7 +58,7 @@
                 <div class="contenido-blog">
                     <h3 class="m-0">Beneficios del Cafe</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, animi beatae? Magni quos dolore accusantium repellendus illum. Eligendi, recusandae. Quidem.</p>
-                    <a href="#" class="btn btn-primario">Leer entrada</a>
+                    <a href="#" class="btn-primary">Leer entrada</a>
                 </div>
             </article>
         </main>
@@ -69,16 +69,31 @@
                     <h4 class="m-0">Tecnicas de extraccion de cafe</h4>
                     <p>Precio:<span>Gratis</span></p>
                     <p>Cupo:<span>20</span></p>
-                    <a href="curso.html" class="btn btn-secundario">Mas informacion</a>
+                    <a href="curso.html" class="btn-secundary">Mas informacion</a>
                 </li>
                 <li class="curso">
                     <h4 class="m-0">Tecnicas de extraccion de cafe</h4>
                     <p>Precio:<span>Gratis</span></p>
                     <p>Cupo:<span>20</span></p>
-                    <a href="curso.html" class="btn btn-secundario">Mas informacion</a>
+                    <a href="curso.html" class="btn btn-secundary">Mas informacion</a>
                     </li>
             </ul>
         </aside>
     </div>
+    <!-- Contenido principal -->
+    <footer class="site-footer">
+        <div class="contenedor">
+            <div class="barra">
+                <a href="index.html">
+                    <p class="m-0">Blog<span>DeCafe</span></p>
+                </a>
+                <nav class="navegacion">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="cursos.html">Cursos</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
